refactor(e2e-tests): add tags in tests, update files for docker and local profile

--- a/docker-compose-local.yml
+++ b/docker-compose-local.yml
@@ -138,6 +138,9 @@ networks:
     name: rangiffler-network-local
 
 volumes:
-  rangiffler-mysql-local: {}
-  rangiffler-redis-geo-local: {}
-  rangiffler-minio-local: {}
+  rangiffler-mysql-local:
+    name: rangiffler-mysql-local
+  rangiffler-redis-geo-local:
+    name: rangiffler-redis-geo-local
+  rangiffler-minio-local:
+    name: rangiffler-minio-local
