--- a/rangiffler-e-2-e-tests/Dockerfile
+++ b/rangiffler-e-2-e-tests/Dockerfile
@@ -12,4 +12,4 @@ COPY ./build.gradle ./
 COPY ./settings.gradle ./
 COPY ./gradle.properties ./
 
-CMD ./gradlew test -Dtest.env=docker -Duser.timezone=Europe/Moscow
+CMD ./gradlew testDocker --no-daemon -Dtest.env=docker -Duser.timezone=Europe/Moscow
