--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -38,19 +38,15 @@ jobs:
       - name: Run e2e-tests
         id: e2e
         run: |
-          : # run e2e tests
-          docker compose up -d
-          docker ps -a
+          : # 1) Поднимаем только БД и сразу печатаем её логи старта/падения
+          docker compose up -d rangiffler-all-db
 
           echo "### Waiting MySQL to be healthy or exited (up to 90s) ###"
           for i in $(seq 1 30); do
             st=$(docker inspect -f '{{.State.Status}}' rangiffler-all-db 2>/dev/null || echo "unknown")
             hs=$(docker inspect -f '{{.State.Health.Status}}' rangiffler-all-db 2>/dev/null || echo "none")
             echo "DB state: $st (health: $hs) [${i}/30]"
-            # выходим, как только контейнер либо упал, либо стал healthy
-            if [ "$st" = "exited" ] || [ "$hs" = "healthy" ]; then
-              break
-            fi
+            [ "$st" = "exited" ] || [ "$hs" = "healthy" ] && break
             sleep 3
           done
 
@@ -61,6 +57,11 @@ jobs:
           docker logs rangiffler-all-db || true
           
           
+          : # run e2e tests
+          docker compose up -d
+          docker ps -a
+
+        
           docker wait rangiffler-e-2-e
           exit_code=$(docker inspect -f '{{.State.ExitCode}}' rangiffler-e-2-e)
           echo "E2E_EXIT_CODE=$exit_code" >> $GITHUB_OUTPUT
